// Runtime configuration protocol for DOMES firmware
// Shared between firmware (nanopb) and host CLI (prost)
syntax = "proto3";
package domes.config;

// Status codes for responses
enum Status {
    STATUS_OK = 0;
    STATUS_ERROR = 1;
    STATUS_INVALID_FEATURE = 2;
    STATUS_BUSY = 3;
}

// Runtime-toggleable features
enum Feature {
    FEATURE_UNKNOWN = 0;
    FEATURE_LED_EFFECTS = 1;
    FEATURE_BLE_ADVERTISING = 2;
    FEATURE_WIFI = 3;
    FEATURE_ESP_NOW = 4;
    FEATURE_TOUCH = 5;
    FEATURE_HAPTIC = 6;
    FEATURE_AUDIO = 7;
}

// Feature with its current state
message FeatureState {
    Feature feature = 1;
    bool enabled = 2;
}

// Request messages
message ListFeaturesRequest {
    // Empty - lists all features
}

message SetFeatureRequest {
    Feature feature = 1;
    bool enabled = 2;
}

// Response messages
message ListFeaturesResponse {
    repeated FeatureState features = 1;
}

message SetFeatureResponse {
    FeatureState feature = 1;
}

// Top-level request envelope
message ConfigRequest {
    oneof request {
        ListFeaturesRequest list_features = 1;
        SetFeatureRequest set_feature = 2;
    }
}

// Top-level response envelope
message ConfigResponse {
    Status status = 1;
    oneof response {
        ListFeaturesResponse list_features = 2;
        SetFeatureResponse set_feature = 3;
    }
}

// ============================================================================
// RGB LED Pattern Control
// ============================================================================

// Available RGB LED patterns
enum RgbPattern {
    RGB_PATTERN_OFF = 0;           // Turn off all LEDs
    RGB_PATTERN_SOLID = 1;         // Solid color (uses primary_color)
    RGB_PATTERN_RAINBOW_CHASE = 2; // Rainbow colors rotating around the ring
    RGB_PATTERN_COMET_TAIL = 3;    // Bright dot with fading trail
    RGB_PATTERN_SPARKLE_FIRE = 4;  // Random sparkling with warm fire colors
}

// RGB color value
message RgbColor {
    uint32 r = 1;  // Red (0-255)
    uint32 g = 2;  // Green (0-255)
    uint32 b = 3;  // Blue (0-255)
}

// Request to set RGB pattern
message SetRgbPatternRequest {
    RgbPattern pattern = 1;
    RgbColor primary_color = 2;    // Primary color (for solid, comet)
    uint32 speed_ms = 3;           // Animation speed in milliseconds
    uint32 brightness = 4;         // Brightness (0-255)
}

// Response to set RGB pattern
message SetRgbPatternResponse {
    RgbPattern active_pattern = 1;
}

// Request to get current RGB pattern
message GetRgbPatternRequest {
    // Empty - returns current pattern
}

// Response with current RGB pattern info
message GetRgbPatternResponse {
    RgbPattern active_pattern = 1;
    RgbColor primary_color = 2;
    uint32 speed_ms = 3;
    uint32 brightness = 4;
}

// Request to list available patterns
message ListRgbPatternsRequest {
    // Empty - lists all patterns
}

// Pattern info for listing
message RgbPatternInfo {
    RgbPattern pattern = 1;
    string name = 2;
    string description = 3;
}

// Response listing available patterns
message ListRgbPatternsResponse {
    repeated RgbPatternInfo patterns = 1;
}
